# softmax-acceleration

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmarks/: main_bench.cpp
common/: utils.cpp  utils.h
include/: simd_helpers.h  softmax.h
scripts/: generate_data.py  softmax_jax.py
src/: softmax_onednn_cpu.cpp
src/cpu_parallel/: README.md  softmax_naive_omp.cpp  softmax_simd_omp.cpp
src/cpu_sequential/: README.md  softmax_foolish_handcoding_cpu.cpp  softmax_fused_simd_cpu.cpp  softmax_naive_cpu.cpp  softmax_simd_cpu.cpp
src/gpu/: README.md  softmax_gpu.cu
tests/: softmax_tests.cpp
